tests/errors/phpdoc_align.php
<?php

declare(strict_types=1);

/**
 * @param int                   $a
 * @param string                $b
 * @param bool                  $c
 * @param \DateTimeImmutable    $d
 */
function hello($a, $b, $c, $d): void
{
}
